<resources>
    <string name="app_name">reading_xml</string>
    <string name="food">Comida: </string>
    <string name="price">Preço: </string>
    <string name="description">Descrição: </string>
    <string name="calories">Calorias: </string>
    <string name="btnPlus">+</string>
    <string name="btnMinus">-</string>
    <string name="btnAdd">Adicionar</string>
    <string name="btnClean">Limpar</string>
    <string name="purchase">Compras</string>
    <string name="total">Total</string>
    <string name="empty"> </string>
</resources>
